--- a/package.json
+++ b/package.json
@@ -40,8 +40,11 @@
     ]
   },
   "devDependencies": {
-    "autoprefixer": "^10.4.7",
+    "autoprefixer": "10.4.5",
     "postcss": "^8.4.14",
     "tailwindcss": "^3.0.24"
+  },
+  "overrides": {
+    "autoprefixer": "10.4.5"
   }
 }
