--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "react-dom": "^18.1.0",
     "react-leaflet": "^4.0.0",
     "react-scripts": "5.0.1",
+    "serve": "^13.0.4",
     "socket.io-client": "^4.5.1",
     "web-vitals": "^2.1.4"
   },
