--- a/kubernetes/ingress.yaml
+++ b/kubernetes/ingress.yaml
@@ -1,7 +1,7 @@
 apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
-  name: live-ingress
+  name: eddiehub-live-ingress
   annotations:
     nginx.ingress.kubernetes.io/rewrite-target: /
 spec:
@@ -13,7 +13,7 @@ spec:
             pathType: Prefix
             backend:
               service:
-                name: live-service
+                name: eddiehub-live-service
                 port:
                   number: 5000
     - host: "live.eddiehub.io"
@@ -23,6 +23,6 @@ spec:
             pathType: Prefix
             backend:
               service:
-                name: live-service
+                name: eddiehub-live-service
                 port:
                   number: 5000
