--- a/kubernetes/service.yaml
+++ b/kubernetes/service.yaml
@@ -1,10 +1,10 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: live-service
+  name: eddiehub-live-service
 spec:
   selector:
-    app: live
+    app: eddiehub-live
   ports:
     - protocol: TCP
       port: 5000
