--- a/.github/workflows/kubescape.yml
+++ b/.github/workflows/kubescape.yml
@@ -2,10 +2,10 @@ name: Kubescape
 on:
   push:
     paths:
-      - 'kubernetes/**'
+      - "kubernetes/**"
   pull_request:
     paths:
-      - 'kubernetes/**'
+      - "kubernetes/**"
 
 jobs:
   security:
@@ -14,7 +14,7 @@ jobs:
       - uses: actions/checkout@v2
       - uses: actions/setup-node@v2
         with:
-          node-version: '16'
+          node-version: "16"
       - name: Install Kubescape
         run: curl -s https://raw.githubusercontent.com/kubescape/kubescape/master/install.sh | /bin/bash
       - name: Kubescape
