--- a/package.json
+++ b/package.json
@@ -44,12 +44,12 @@
   },
   "devDependencies": {
     "autoprefixer": "10.4.5",
+    "husky": "^8.0.2",
     "lint-staged": "^13.0.4",
     "postcss": "^8.4.14",
     "prettier": "^2.8.0",
     "prettier-plugin-tailwindcss": "^0.1.13",
-    "tailwindcss": "^3.0.24",
-    "husky": "^8.0.0"
+    "tailwindcss": "^3.0.24"
   },
   "overrides": {
     "autoprefixer": "10.4.5"
