--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
     "react-leaflet": "^4.0.0",
+    "react-leaflet-cluster": "^2.0.0",
     "react-scripts": "5.0.1",
     "serve": "^12.0.1",
     "socket.io-client": "^4.5.1",
