--- a/package.json
+++ b/package.json
@@ -4,9 +4,6 @@
   "private": true,
   "type": "module",
   "dependencies": {
-    "@testing-library/jest-dom": "^5.16.4",
-    "@testing-library/react": "^13.3.0",
-    "@testing-library/user-event": "^13.5.0",
     "leaflet": "^1.8.0",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
@@ -14,32 +11,6 @@
     "react-leaflet-cluster": "^2.0.0",
     "serve": "^12.0.1",
     "socket.io-client": "^4.5.1"
-  },
-  "scripts": {
-    "dev": "vite dev",
-    "build": "vite build",
-    "preview": "vite preview",
-    "start:prod": "serve -s dist",
-    "format": "prettier --ignore-path .gitignore --write --plugin-search-dir=. .",
-    "prepare": "husky install"
-  },
-  "eslintConfig": {
-    "extends": [
-      "react-app",
-      "react-app/jest"
-    ]
-  },
-  "browserslist": {
-    "production": [
-      ">0.2%",
-      "not dead",
-      "not op_mini all"
-    ],
-    "development": [
-      "last 1 chrome version",
-      "last 1 firefox version",
-      "last 1 safari version"
-    ]
   },
   "devDependencies": {
     "@vitejs/plugin-react": "^3.0.0",
@@ -52,8 +23,26 @@
     "tailwindcss": "^3.0.24",
     "vite": "^4.0.0"
   },
-  "overrides": {
-    "autoprefixer": "10.4.5"
+  "scripts": {
+    "dev": "vite dev",
+    "build": "vite build",
+    "preview": "vite preview",
+    "start:prod": "serve -s dist",
+    "format": "prettier --ignore-path .gitignore --write --plugin-search-dir=. .",
+    "prepare": "husky install",
+    "lint": "eslint --ignore-path .gitignore ."
+  },
+  "browserslist": {
+    "production": [
+      ">0.2%",
+      "not dead",
+      "not op_mini all"
+    ],
+    "development": [
+      "last 1 chrome version",
+      "last 1 firefox version",
+      "last 1 safari version"
+    ]
   },
   "lint-staged": {
     "*.{cjs,js,ts,css,scss,svelte}": [
