--- a/package.json
+++ b/package.json
@@ -3,6 +3,8 @@
   "version": "0.8.0",
   "private": true,
   "dependencies": {
+    "@headlessui/react": "^1.7.5",
+    "@heroicons/react": "^2.0.13",
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
