--- a/.gitpod.yml
+++ b/.gitpod.yml
@@ -4,8 +4,10 @@ tasks:
     command: npm run dev
 # List the ports to expose. Learn more https://www.gitpod.io/docs/config-ports/
 ports:
-  - port: 3000
+  - port: 5173
     onOpen: open-browser
+  - port: 4173
+    onOpen: open-preview
 github:
   prebuilds:
     master: true
