--- a/package.json
+++ b/package.json
@@ -2,36 +2,41 @@
   "name": "eddiehub-live",
   "version": "0.8.1",
   "private": true,
+  "type": "module",
   "dependencies": {
     "@headlessui/react": "^1.7.5",
     "@heroicons/react": "^2.0.13",
-    "@testing-library/jest-dom": "^5.16.4",
-    "@testing-library/react": "^13.3.0",
-    "@testing-library/user-event": "^13.5.0",
+    "eslint-config-prettier": "^8.5.0",
     "leaflet": "^1.8.0",
+    "prop-types": "^15.8.1",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
     "react-leaflet": "^4.0.0",
     "react-leaflet-cluster": "^2.0.0",
-    "react-scripts": "5.0.1",
     "serve": "^12.0.1",
-    "socket.io-client": "^4.5.1",
-    "web-vitals": "^2.1.4"
+    "socket.io-client": "^4.5.1"
+  },
+  "devDependencies": {
+    "@vitejs/plugin-react": "^3.0.0",
+    "autoprefixer": "10.4.5",
+    "eslint": "^8.29.0",
+    "eslint-plugin-react": "^7.31.11",
+    "husky": "^8.0.2",
+    "lint-staged": "^13.0.4",
+    "postcss": "^8.4.14",
+    "prettier": "^2.8.1",
+    "prettier-plugin-tailwindcss": "^0.1.13",
+    "tailwindcss": "^3.0.24",
+    "vite": "^4.0.0"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "start:prod": "serve -s build",
-    "test": "react-scripts test",
+    "dev": "vite dev",
+    "build": "vite build",
+    "preview": "vite preview",
+    "start:prod": "serve -s dist",
     "format": "prettier --ignore-path .gitignore --write --plugin-search-dir=. .",
-    "eject": "react-scripts eject",
-    "prepare": "husky install"
-  },
-  "eslintConfig": {
-    "extends": [
-      "react-app",
-      "react-app/jest"
-    ]
+    "prepare": "husky install",
+    "lint": "eslint --ignore-path .gitignore src/**/*.js src/**/*.jsx"
   },
   "browserslist": {
     "production": [
@@ -44,18 +49,6 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  },
-  "devDependencies": {
-    "autoprefixer": "10.4.5",
-    "husky": "^8.0.2",
-    "lint-staged": "^13.0.4",
-    "postcss": "^8.4.14",
-    "prettier": "^2.8.0",
-    "prettier-plugin-tailwindcss": "^0.1.13",
-    "tailwindcss": "^3.0.24"
-  },
-  "overrides": {
-    "autoprefixer": "10.4.5"
   },
   "lint-staged": {
     "*.{cjs,js,ts,css,scss,svelte}": [
