manual implementation of marker cluster

--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@heroicons/react": "^2.0.13",
     "eslint-config-prettier": "^8.5.0",
     "leaflet": "^1.8.0",
+    "leaflet.markercluster": "^1.5.3",
     "prop-types": "^15.8.1",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
